--- a/SantaRamona.csproj
+++ b/SantaRamona.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="santa-ramona-Backend-Backoffice\**" />
+    <Content Remove="santa-ramona-Backend-Backoffice\**" />
+    <EmbeddedResource Remove="santa-ramona-Backend-Backoffice\**" />
+    <None Remove="santa-ramona-Backend-Backoffice\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="EntityFramework" Version="6.5.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.9" />
